trying to fix the dog dividers
reexported png files to create box shadow with css.

first tried to export svg files but images were blurry, so re-exported
png files. when adding in box shadow it shows on the square image not
the circle portion of the img.

--- a/source/stylesheet.css
+++ b/source/stylesheet.css
@@ -165,6 +165,7 @@ section {
 
 .dog-divider {
     margin-bottom: -9vw;
+    box-shadow: 0 2px 2px black;
     height: auto;
     width: 15%;
 }
